<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content">
    <ImageView
            android:layout_width="158dp"
            android:layout_height="106dp" android:src="@drawable/london1"
            android:id="@+id/imageView6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/learnmore"/>
    <TextView
            android:text="@string/flat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/desc1"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:id="@+id/textView16" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView15" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleSmall"
            android:id="@+id/ratingBar"
            android:progressTint="@color/colorPrimary"
            android:rating="4"
            android:numStars="4"
            app:layout_constraintTop_toBottomOf="@+id/textView16" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="6dp"/>
    <TextView
            android:text="@string/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="@font/montserrat_semibold"
            android:id="@+id/textView17" app:layout_constraintStart_toEndOf="@+id/ratingBar"
            android:layout_marginStart="4dp"
            android:layout_marginTop="6dp" app:layout_constraintTop_toBottomOf="@+id/textView16"/>
    <TextView
            android:text="@string/superhot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:id="@+id/textView18" app:layout_constraintStart_toEndOf="@+id/textView17"
            android:layout_marginTop="6dp"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/textView16" android:layout_marginStart="4dp"/>
</android.support.constraint.ConstraintLayout>