<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                tools:context=".MainActivity">

            <View android:layout_width="350dp" android:layout_height="353dp"
                  android:background="@color/amarillo"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="8dp"
                  app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
            </View>
            <ImageView
                    android:layout_width="412dp"
                    android:layout_height="236dp"
                    app:srcCompat="@drawable/image"
                    android:id="@+id/imageView"
                    android:contentDescription="@string/viewport_description"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"/>
            <TextView
                    android:text="@string/viewport"
                    android:layout_width="340dp"
                    android:layout_height="79dp"
                    android:textColor="@android:color/black"
                    android:textSize="29sp"
                    android:fontFamily="@font/montserrat_bold"
                    android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    android:layout_marginEnd="12dp" app:layout_constraintEnd_toEndOf="parent"
            />
            <android.support.constraint.ConstraintLayout
                    android:layout_width="411dp"
                    android:layout_height="495dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/constraintLayout">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/where"
                        style="@style/labels"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="40dp" android:layout_marginTop="24dp"
                        app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView2"/>
                <EditText
                        android:layout_width="330dp"
                        android:inputType="textPersonName"
                        android:ems="10"
                        tools:ignore="Autofill"
                        style="@style/inputs"
                        android:id="@+id/editText" android:layout_marginStart="40dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="12dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginEnd="40dp"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                        android:hint="@string/anywhere" android:layout_height="49dp"/>
                <TextView
                        android:text="@string/checkin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/labels"
                        android:id="@+id/textView3" android:layout_marginTop="28dp"
                        app:layout_constraintTop_toBottomOf="@+id/editText"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="40dp"/>
                <EditText
                        android:inputType="textPersonName"
                        android:ems="10"
                        tools:ignore="Autofill"
                        android:id="@+id/editText2"
                        style="@style/inputs"
                        android:hint="@string/date" android:layout_marginTop="12dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginStart="40dp"
                        app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                        android:text="@string/checkout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/labels"
                        android:id="@+id/textView4" android:layout_marginTop="28dp"
                        app:layout_constraintTop_toBottomOf="@+id/editText" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="108dp"/>
                <EditText
                        android:inputType="textPersonName"
                        android:ems="10"
                        tools:ignore="Autofill"
                        style="@style/inputs"
                        android:id="@+id/editText3" android:layout_marginEnd="40dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
                        android:hint="@string/date"/>
                <TextView
                        android:text="@string/adults"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/labels"
                        android:id="@+id/textView5" android:layout_marginTop="28dp"
                        app:layout_constraintTop_toBottomOf="@+id/editText2"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="40dp"/>
                <EditText
                        android:inputType="textPersonName"
                        android:ems="10"
                        style="@style/inputs"
                        tools:ignore="Autofill"
                        android:id="@+id/editText5" android:layout_marginStart="40dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="12dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" android:hint="@string/adult1"/>
                <TextView
                        android:text="@string/children"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/labels"
                        android:id="@+id/textView6" android:layout_marginTop="28dp"
                        app:layout_constraintTop_toBottomOf="@+id/editText3"
                        app:layout_constraintStart_toEndOf="@+id/textView5"
                        android:layout_marginStart="108dp"/>
                <EditText
                        android:inputType="textPersonName"
                        android:ems="10"
                        style="@style/inputs"
                        tools:ignore="Autofill"
                        android:id="@+id/editText6" android:layout_marginEnd="40dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
                        android:hint="@string/child0"/>
                <Button
                        android:text="@string/search"
                        android:layout_width="328dp"
                        style="@style/search_button"
                        android:id="@+id/button" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@+id/editText5"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
            android:id="@+id/constraintLayout2">
        <include layout="@layout/navigation_bottom"
                 tools:layout_editor_absoluteX="1dp"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_navigation_main"/>

</android.support.constraint.ConstraintLayout>