<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/intro" android:layout_marginTop="8dp"
              style="@style/subtitles"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="40dp" android:id="@+id/textView13"
              android:layout_marginEnd="8dp"/>

    <TextView android:layout_width="325dp" android:layout_height="51dp"
              android:text="@string/intro_text"
              android:layout_marginTop="16dp"
              android:fontFamily="@font/montserrat_semibold"
              android:textSize="16sp"
              app:layout_constraintTop_toBottomOf="@+id/textView13"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="40dp" android:id="@+id/textView14"
              android:layout_marginEnd="40dp"
              app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.constraint.ConstraintLayout android:layout_width="341dp"
                                                 android:layout_height="346dp"
                                                 android:background="@drawable/intro"
                                                 android:layout_marginStart="40dp"
                                                 app:layout_constraintEnd_toEndOf="parent"
                                                 android:layout_marginEnd="40dp"
                                                 app:layout_constraintBottom_toBottomOf="parent"
                                                 android:id="@+id/constraintLayout2"
                                                 android:layout_marginTop="24dp"
                                                 app:layout_constraintTop_toBottomOf="@+id/textView14"
                                                 app:layout_constraintStart_toStartOf="parent">
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/explore_homes"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/explore_button"
                android:padding="15dp"
                android:textSize="12sp"
                android:layout_marginEnd="8dp"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>