<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        android:layout_width="412dp"
        android:layout_height="wrap_content" xmlns:tools="http://schemas.android.com/tools"
        app:layout_constraintStart_toStartOf="@+id/section02" android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="@+id/section02" android:layout_marginEnd="8dp"
        android:layout_marginTop="3dp" app:layout_constraintTop_toBottomOf="@+id/linebreak01"
        android:id="@+id/section01" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:text="@string/recommended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/subtitles"
            android:id="@+id/recommended_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp" android:layout_marginStart="40dp"/>

    <HorizontalScrollView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                          app:layout_constraintTop_toBottomOf="@+id/recommended_title"
                          android:scrollbars="none" android:layout_marginStart="16dp"
                          android:layout_marginEnd="24dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="32dp"
                android:paddingStart="32dp"
                app:layout_constraintTop_toBottomOf="@+id/section01"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="849dp">

            <!--HOME01-->
            <android.support.constraint.ConstraintLayout style="@style/homes_container"
                                                         android:layout_height="190dp"
                                                         android:background="@drawable/sanfrancisco"
                                                         app:layout_constraintTop_toTopOf="parent"
                                                         android:layout_marginStart="16dp"
                                                         app:layout_constraintStart_toStartOf="parent"
                                                         app:layout_constraintBottom_toBottomOf="parent"
                                                         android:id="@+id/view1"
                                                         android:layout_marginTop="16dp"

            >

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/san"
                          app:layout_constraintTop_toTopOf="parent"
                          style="@style/homes"
                          android:textColor="@android:color/white"
                          android:textAlignment="center"
                          android:layout_marginTop="84dp" android:layout_marginEnd="16dp"
                          app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                          app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.52"
                          android:id="@+id/textView9"/>
                <TextView android:layout_width="87dp" android:layout_height="36dp"
                          android:text="@string/price"
                          android:textColor="@android:color/white"
                          android:textAlignment="center"
                          android:fontFamily="@font/montserrat_bold"
                          app:layout_constraintTop_toBottomOf="@+id/textView9"
                          android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                          android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                          android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.51"/>

            </android.support.constraint.ConstraintLayout>

            <!--HOME02-->
            <android.support.constraint.ConstraintLayout style="@style/homes_container"
                                                         android:background="@drawable/colombia"
                                                         android:layout_height="190dp"
                                                         app:layout_constraintStart_toEndOf="@+id/view1"
                                                         app:layout_constraintTop_toTopOf="parent"
                                                         android:id="@+id/view2"
                                                         android:layout_marginTop="16dp"
                                                         android:layout_marginStart="16dp">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/col"
                          app:layout_constraintTop_toTopOf="parent"
                          style="@style/homes"
                          android:textColor="@android:color/white"
                          android:textAlignment="center"
                          android:id="@+id/textView10"
                          android:layout_marginTop="84dp" android:layout_marginEnd="16dp"
                          app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                          app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.52"/>

                <TextView android:layout_width="87dp" android:layout_height="36dp"
                          android:text="@string/price"
                          android:textColor="@android:color/white"
                          android:textAlignment="center"
                          android:fontFamily="@font/montserrat_bold"
                          app:layout_constraintTop_toBottomOf="@+id/textView10"
                          android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                          android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                          android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.51"/>

            </android.support.constraint.ConstraintLayout>

            <!--HOME03-->
            <android.support.constraint.ConstraintLayout style="@style/homes_container"
                                                         android:background="@drawable/paris"
                                                         android:layout_height="190dp"
                                                         app:layout_constraintTop_toTopOf="parent"
                                                         app:layout_constraintStart_toEndOf="@+id/view2"
                                                         android:id="@+id/view3"
                                                         android:layout_marginTop="16dp"
                                                         android:layout_marginStart="16dp">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          app:layout_constraintTop_toTopOf="parent"
                          style="@style/homes"
                          android:textColor="@android:color/white"
                          android:textAlignment="center"
                          android:text="@string/paris"
                          android:id="@+id/textView11"
                          android:layout_marginTop="84dp" android:layout_marginEnd="16dp"
                          app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                          app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.52"/>

                <TextView android:layout_width="87dp" android:layout_height="36dp"
                          android:text="@string/price"
                          android:textColor="@android:color/white"
                          android:textAlignment="center"
                          android:fontFamily="@font/montserrat_bold"
                          app:layout_constraintTop_toBottomOf="@+id/textView11"
                          android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                          android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                          android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.51"/>

            </android.support.constraint.ConstraintLayout>

            <!--HOME04-->
            <android.support.constraint.ConstraintLayout style="@style/homes_container"
                                                         android:background="@drawable/tokyo"
                                                         android:layout_height="190dp"
                                                         app:layout_constraintTop_toTopOf="parent"
                                                         app:layout_constraintStart_toEndOf="@+id/view3"
                                                         app:layout_constraintLeft_toRightOf="@+id/view3"
                                                         app:layout_constraintRight_toRightOf="parent"
                                                         android:id="@+id/view4"
                                                         android:layout_marginTop="16dp"
                                                         android:layout_marginStart="16dp"
            >
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/tokyo"
                          app:layout_constraintTop_toTopOf="parent"
                          style="@style/homes"
                          android:textColor="@android:color/white"
                          android:textAlignment="center"
                          android:id="@+id/textView12"
                          android:layout_marginTop="84dp" android:layout_marginEnd="16dp"
                          app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                          app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.52"/>

                <TextView android:layout_width="87dp" android:layout_height="36dp"
                          android:text="@string/price"
                          android:textColor="@android:color/white"
                          android:textAlignment="center"
                          android:fontFamily="@font/montserrat_bold"
                          app:layout_constraintTop_toBottomOf="@+id/textView12"
                          android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                          android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                          android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.51"/>

            </android.support.constraint.ConstraintLayout>


        </android.support.constraint.ConstraintLayout>

    </HorizontalScrollView>

</android.support.constraint.ConstraintLayout>